backup_individuals/sjeng/use_undefined_identifier/c0/SwitchColor
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/SwitchColor/src/crazy.c:664:13: error: use of undeclared identifier 'unk_424DA0'
memcpy( t, &unk_424DA0, sizeof( t)); 
            ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/SwitchColor/src/obj/crazy.o] Error 1
